# efeffit_installer

./: .gitattributes  .gitignore  README.md
ifeffit-1.2.5/: INSTALL  KNOWN_BUGS  Makefile~  NEWS  configure  configure.in  grexec.f  iconf_iff  iconf_pgplot  pgdemo11  pgdemo13  pgdemo15  pgdemo16  pgdemo2  pgdemo4  pgdemo5  pgdemo6  pgdemo7  pgdemo9  pgxwin_server
ifeffit-1.2.5/CVS/: Entries
ifeffit-1.2.5/LFS_XAFS/analysis/ag10/: chi_fitk5-10.txt  variables_k2-10.out
ifeffit-1.2.5/LFS_XAFS/analysis/fc/: lfs_xafs_his.txt
ifeffit-1.2.5/LFS_XAFS/analysis/redi/: chi_fitK3p3-9.txt  lfs_xafs_his.txt  variables.out
ifeffit-1.2.5/LFS_XAFS/analysis/sq/: lfs_xafs_his_variables_n-pr_Sq_0DWF_93deg.out_final.txt  variables_89.8deg.out  variables_N4.7_O4.1.out  variables_N4.8_O4.1.out  variables_Sq_crystal_+10deg.out  variables_Sq_crystal_0deg.out  variables_n-pr_Td_93deg_0DWF.out
ifeffit-1.2.5/LFS_XAFS/analysis/td/: lfs_xafs_his.txt  lfs_xafs_his_2dwf.out.txt  variables.out  variables_TD_cryst_100deg.out  variables_TD_cryst_90deg.out  variables_Td_93deg_DW0.out  variables_Td_cryst_80deg.out  variables_final_Td_93deg_DWF_multiple.out_QXAFS_i-pr_Td
ifeffit-1.2.5/LFS_XAFS/lfs_xafs/: Makefile  lfs_xafs-old.f  lfs_xafs.f  lfs_xafs_very_important.f
ifeffit-1.2.5/LFS_XAFS/lfs_xafs/RCS/: lfs_xafs.f,v
ifeffit-1.2.5/LFS_XAFS/lfs_xafs/old/: Copy of lfs_xafs.f
ifeffit-1.2.5/LFS_XAFS/mu2chi/: Copy of Makefile  mu2chi3.f  mu2chi_abs.f  mu2chi_fc_data.f  mu2chi_sqc_abs.f
ifeffit-1.2.5/doc/CVS/: Repository
ifeffit-1.2.5/doc/RefMan/: basics.tex  commands.tex  license.tex  refman.tex
ifeffit-1.2.5/doc/Tutorial/: ifmacs_com.aux  ifmacs_pdf.aux  license.aux  tutor.aux
ifeffit-1.2.5/examples/CVS/: Repository
ifeffit-1.2.5/examples/Feffit/: F1.iff  Fit_bkg.iff
ifeffit-1.2.5/examples/Pre_Edge/: bkg_cl.iff
ifeffit-1.2.5/examples/diffkk/: test.out
ifeffit-1.2.5/readline/: Makefile.in  config.status
ifeffit-1.2.5/readline/examples/: Makefile
ifeffit-1.2.5/readline/shlib/: Makefile
ifeffit-1.2.5/src/CVS/: Repository
ifeffit-1.2.5/src/FEFF8/: a.out  au_feff.inp  cu_feff.inp
ifeffit-1.2.5/src/autobk/: Makefile  autobk
ifeffit-1.2.5/src/cmdline/: Makefile  Makefile_backup  Makefile~  iff_shell.c
ifeffit-1.2.5/src/diffkk/: Makefile.in  diffkk.f  dkcom.f  dkfit.f
ifeffit-1.2.5/src/feff6/: feff6
ifeffit-1.2.5/src/feffit/: feffit
ifeffit-1.2.5/src/lib/: Config.mak  Makefile.dep  Makefile~  chipth.f  com.h  compat.f  copyright.f  decod.f  encod.f  feff_tables.f  feffit.h~  iff_bkg_cl.f  iff_chieps.f  iff_correl.f  iff_echo.f  iff_feffit.f  iff_feffit2.f  iff_ff2chi.f  iff_getpath.f  iff_init.f  iff_minimize.f  iff_path.f  iff_plot.f  iff_plot_init.f  iff_random.f  iff_rdf.f  iff_save.f  iff_show.f  iff_spline.f~  misc_arr.f  padlib.f  preedg.f  preedg.f~  site_install.py  spline.f  str.f
ifeffit-1.2.5/src/pgstub/: Makefile
ifeffit-1.2.5/src/test/: ifftest2
ifeffit-1.2.5/wrappers/CVS/: Repository
ifeffit-1.2.5/wrappers/perl/: Makefile.old
ifeffit-1.2.5/wrappers/python/: Ifeffit.py  setup.py
ifeffit-1.2.5_lucas/: ChangeLog  (+17 more)
(+865 files in other folders)
